# budget-dashboard

./: .env.example  .gitignore  AGENTS.md  AWS_Infrastructure_Field_Guide_Gentle_Steps.md  Makefile  README.md  README_FOR_CODEX.md  _  pyproject.toml  requirements.txt  uv.toml
config/: settings.py  urls.py
docs/: ACCEPTANCE_TESTS.md  ACCESS_BY_ROLE.md  AUDIO_TRANSCRIPTION_AND_XLSX_DISCOVERY.md  CODEX_PROMPTS.md  CURRENT_STATE_AND_RUN_GUIDE.md  DASHBOARD_SPEC.md  DEPLOYMENT_AWS.md  DEVELOPER_NOTES.md  END_STATE_CLEANUP_PLAN.md  EXCEL_IMPORT_SPEC.md  IMPLEMENTATION_PLAN.md  PERMISSIONS_MATRIX.md  PHASE_2.md  PRODUCT_REQUIREMENTS.md  PROJECT_BLUEPRINT.md  PROJECT_EXPLAINED.md  PROJECT_FILE_REFERENCE.md  README.md  SIMPLE_LOCAL_SETUP.md  _  cursor_prompts.md  requirements_audit.md
docs/architecture/: DATA_MODEL.md  PROJECT_BLUEPRINT.md  PROJECT_FILE_REFERENCE.md
docs/discovery/: 2026-06-15 22.11.18_transcript.fa.md  README.md  column_mapping.local.yml.example  column_mapping.yml
docs/guides/: CURRENT_STATE_AND_RUN_GUIDE.md  PROJECT_EXPLAINED.md  SIMPLE_LOCAL_SETUP.md  USER_SITEMAP.md
docs/operations/: ACCESS_BY_ROLE.md  DEPLOYMENT_AWS.md  PASSWORDS_AND_USERS.md  (+1 more)
marketing/: admin.py  analytics.py  apps.py  business_section.py  context_processors.py  cost_buckets.py  forms.py  invoice_amounts.py  jalali.py  middleware.py  models.py  money_format.py  permissions.py  reference_data.py  reference_views.py  table_sort.py  translations.py  urls.py  views.py  workbook_labels.py
tools/: batch_transcribe_artifacts.py  inspect_xlsx_structure.py  transcribe_audio.py
(+112 files in other folders)
